--- a/index.html
+++ b/index.html
@@ -1252,7 +1252,7 @@
         
         <div class="gallery-grid" id="galleryGrid">
             <div class="gallery-item">
-                <img src="https://via.placeholder.com/400x350/1a1a1a/caa36a?text=Rock+Paper+Scissors+Game" alt="Rock Paper Scissors Game" class="gallery-image">
+                <img src="rock.jpg" alt="Rock Paper Scissors Game" class="gallery-image">
                 <div class="gallery-info">
                     <h3>Rock Paper Scissors</h3>
                     <p>An interactive web-based game showcasing fundamental JavaScript skills, DOM manipulation, and creative UI design. A perfect blend of logic and aesthetics.</p>
@@ -1712,3 +1712,4 @@
     </script>
 </body>
     </html>
+
