--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             bottom: 15px;
             width: calc(100% - 30px);
             height: calc(100% - 30px);
-            background-image: url('profile.jpg');
+            background-image: url('profile2.png');
             background-size: cover;
             background-position: center;
             border-radius: 40% 60% 60% 40% / 60% 30% 70% 40%;
@@ -2700,3 +2700,4 @@
     </script>
 </body>
 </html>
+
